--- a/Style1.css
+++ b/Style1.css
@@ -173,7 +173,29 @@ background-color:#a59c96 ;
             opacity: 0.9;
         }
 
-         .sidebar a.active{
+        .top-bar{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 20px;
+    }
+
+        .std-logout {
+            padding: 15px;
+            width: 10%;
+            margin: 10px;
+            background:linear-gradient(to right,#893c3c, rgb(213, 140, 140));
+            color: #fff;
+            border: none;
+            border-radius: 12px;
+            cursor: pointer;
+            font-size: 15px;
+            font-weight: bold;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }         
+        .sidebar a.active{
             /* background:linear-gradient(135deg,#4f46e5,#7c3aed); */
             background: linear-gradient(to right, #5d534d, #9a8888);
             color: #413f3f;
